--- a/mingw-w64-geos/PKGBUILD
+++ b/mingw-w64-geos/PKGBUILD
@@ -42,4 +42,5 @@ build() {
 package() {
   cd "${srcdir}/build-${MINGW_CHOST}"
   make DESTDIR=${pkgdir} install
+  cp "${pkgdir}${MINGW_PREFIX}/bin/geos-config" "${pkgdir}${MINGW_PREFIX}/bin/${MINGW_CHOST}-geos-config"
 }
