--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=libgit2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.3.0
+pkgver=1.4.2
 pkgrel=1
 pkgdesc='A linkable library for Git (mingw-w64)'
 arch=('any')
@@ -15,9 +15,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-libssh2"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake" "${MINGW_PACKAGE_PREFIX}-gcc")
 source=(${_realname}-${pkgver}.tar.gz::"https://github.com/libgit2/libgit2/archive/v${pkgver}.tar.gz"
-        "winlibs.patch")
+        "winlibs.patch"
+        "0001-libgit2-1.4.2-rc-filename.patch")
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('192eeff84596ff09efb6b01835a066f2df7cd7985e0991c79595688e6b36444e'
+sha256sums=('901c2b4492976b86477569502a41c31b274b69adc177149c02099ea88404ef19'
+            'SKIP'
             'SKIP')
 
 prepare() {
@@ -25,13 +27,13 @@ prepare() {
   rm ${_realname}-${pkgver}/src/win32/thread.c
   cd ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/winlibs.patch
+  patch -p1 -i ${srcdir}/0001-libgit2-1.4.2-rc-filename.patch
 }
 
 build() {
   [[ -d "${srcdir}"/build-${MINGW_CHOST} ]] && rm -rf "${srcdir}"/build-${MINGW_CHOST}
   mkdir -p "${srcdir}"/build-${MINGW_CHOST} && cd "${srcdir}"/build-${MINGW_CHOST}
 
-  unset PKG_CONFIG # cmake doesn't like
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=;-DCMAKE_PREFIX_PATH=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"MSYS Makefiles" \
@@ -42,6 +44,8 @@ build() {
     -DBUILD_CLAR=OFF \
     -DTHREADSAFE=OFF \
     -DWINHTTP=ON \
+    -DUSE_SSH=ON \
+    -DUSE_ICONV=ON \
     -DREGEX_BACKEND=builtin \
     ../${_realname}-${pkgver}
 
