--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -24,7 +24,7 @@ sha256sums=('901c2b4492976b86477569502a41c31b274b69adc177149c02099ea88404ef19'
 
 prepare() {
   tar --exclude tests/resources/testrepo-worktree/link_to_new.txt -zxf ${_realname}-${pkgver}.tar.gz
-  rm ${_realname}-${pkgver}/src/win32/thread.c
+  #rm ${_realname}-${pkgver}/src/win32/thread.c
   cd ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/winlibs.patch
   patch -p1 -i ${srcdir}/0001-libgit2-1.4.2-rc-filename.patch
