--- a/mingw-w64-netcdf/PKGBUILD
+++ b/mingw-w64-netcdf/PKGBUILD
@@ -4,7 +4,7 @@ _realname=netcdf
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.9.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Interface for scientific data access to large binary data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32')
@@ -57,8 +57,11 @@ build() {
     --disable-plugins \
     --disable-byterange \
     --disable-logging \
-    --disable-dap-remote-tests \
-    ${nczarr_opt}
+    --disable-libxml2 \
+    --enable-dap-remote-tests \
+    ${nczarr_opt} \
+    CFLAGS="-DCURL_STATICLIB" \
+    LIBS="$( pkg-config --libs-only-l --static libcurl )"
 
   make ${MAKEFLAGS}
 }
