--- a/mingw-w64-netcdf/PKGBUILD
+++ b/mingw-w64-netcdf/PKGBUILD
@@ -4,7 +4,7 @@ _realname=netcdf
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.9.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Interface for scientific data access to large binary data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32')
@@ -12,14 +12,18 @@ license=('custom')
 url="https://www.unidata.ucar.edu/software/netcdf/"
 depends=("${MINGW_PACKAGE_PREFIX}-curl"
          "${MINGW_PACKAGE_PREFIX}-hdf5"
+         "${MINGW_PACKAGE_PREFIX}-libxml2"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-pkg-config"
              autoconf
              automake
              libtool)
 checkdepends=("unzip")
-source=(${_realname}-${pkgver}.tar.gz::"https://github.com/Unidata/netcdf-c/archive/v${pkgver}.tar.gz")
-sha256sums=('9f4cb864f3ab54adb75409984c6202323d2fc66c003e5308f3cdf224ed41c0a6')
+source=(${_realname}-${pkgver}.tar.gz::"https://github.com/Unidata/netcdf-c/archive/v${pkgver}.tar.gz"
+	0002-no-file.patch)
+sha256sums=('9f4cb864f3ab54adb75409984c6202323d2fc66c003e5308f3cdf224ed41c0a6'
+	'd6f566945c232f78cce680ddc235c178fc1c5a41e5b8eee067f5b9251e2ea81e')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -33,7 +37,8 @@ apply_patch_with_msg() {
 prepare() {
   cd "${srcdir}/${_realname}-c-${pkgver}"
 
-#  apply_patch_with_msg *.patch
+  # Patch from https://github.com/msys2/MINGW-packages/pull/11920:
+  apply_patch_with_msg 0002-no-file.patch
 
   autoreconf -if
 }
@@ -48,17 +53,25 @@ build() {
     nczarr_opt=""
   fi
 
+  PREFIX_WIN="$( cygpath -wm / )"
+  CPPFLAGS="$( pkg-config --cflags libxml-2.0 libcurl |
+	  sed "s|${PREFIX_WIN}|/|g" ) -D__USE_MINGW_ANSI_STDIO=1"
+  LIBS="$( pkg-config --libs-only-l --static libxml-2.0 libcurl )"
+
   ./configure \
     --prefix=${MINGW_PREFIX} \
     --disable-shared \
     --enable-static \
     --enable-hdf5 \
     --enable-dap \
+    --enable-libxml2 \
     --disable-plugins \
     --disable-byterange \
     --disable-logging \
-    --disable-dap-remote-tests \
-    ${nczarr_opt}
+    --enable-dap-remote-tests \
+    ${nczarr_opt} \
+    CPPFLAGS="${CPPFLAGS}" \
+    LIBS="${LIBS}"
 
   make ${MAKEFLAGS}
 }
