--- a/mingw-w64-libssh2/PKGBUILD
+++ b/mingw-w64-libssh2/PKGBUILD
@@ -3,23 +3,28 @@
 _realname=libssh2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.10.0
+pkgver=1.10.1
 pkgrel=9800
 pkgdesc="A library implementing the SSH2 protocol as defined by Internet Drafts (mingw-w64)"
 arch=('any')
 url="https://libssh2.org"
 license=("BSD")
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-pkg-config")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+             "${MINGW_PACKAGE_PREFIX}-pkg-config"
+              "autoconf" "automake" "libtool")
 depends=("${MINGW_PACKAGE_PREFIX}-openssl" "${MINGW_PACKAGE_PREFIX}-zlib")
 options=('staticlibs' 'strip')
-source=("${url}/download/${_realname}-${pkgver}.tar.gz"
+
+# Build from git for now: https://github.com/libssh2/libssh2/issues/536#issuecomment-892897873
+source=("${_realname}-${pkgver}"::"git+https://github.com/libssh2/${_realname}.git"
         "fix-pkgconfig.patch")
-sha256sums=('2d64e90f3ded394b91d3a2e774ca203a4179f69aebee03003e5a6fa621e41d51'
+sha256sums=('SKIP'
             '7a6545f6d457ad008aacefe04a60727c02d33927c8a903745bf191f69cc8ba55')
 
 prepare() {
   cd ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/fix-pkgconfig.patch
+  autoreconf -fi
 }
 
 build() {
