--- a/mingw-w64-libssh2/PKGBUILD
+++ b/mingw-w64-libssh2/PKGBUILD
@@ -28,9 +28,10 @@ sha256sums=('SKIP'
 prepare() {
   cd ${_realname}-${pkgver}
   patch -p1 -i ${srcdir}/fix-pkgconfig.patch
-  patch --reverse -p1 -i ${srcdir}/b952674f.diff
-  patch --reverse -p1 -i ${srcdir}/17c9c1fc.diff
+  #patch --reverse -p1 -i ${srcdir}/b952674f.diff
+  #patch --reverse -p1 -i ${srcdir}/17c9c1fc.diff
   autoreconf -fi
+  #sed -i 's/libssl libcrypto/libssl libcrypto libcrypt32 libgdi32 libws2_32/g' configure
 }
 
 build() {
@@ -43,7 +44,7 @@ build() {
   #  local _SSL_BACKEND=wincng
   #else
     local _SSL_BACKEND=openssl
-    export LIBS="-lcrypt32 -lgdi32"
+    export LIBS=$(pkg-config --libs-only-l --static libssl)
   #fi
 
   ../${_realname}-${pkgver}/configure \
@@ -54,6 +55,13 @@ build() {
     --enable-static \
     --disable-shared \
     --with-crypto=$_SSL_BACKEND
+
+  if grep 'AES-CTR: no' config.log; then
+    cat config.log
+    echo "==========="
+    echo "Failed to properly detect OpenSSL"
+    exit 1
+  fi
 
   make
 }
