--- a/mingw-w64-ninja/PKGBUILD
+++ b/mingw-w64-ninja/PKGBUILD
@@ -3,17 +3,26 @@
 _realname=ninja
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.10.2
-pkgrel=1
+pkgver=1.11.1
+pkgrel=2
 pkgdesc="Ninja is a small build system with a focus on speed (mingw-w64)"
 arch=('any')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 url="https://ninja-build.org"
-license=('Apache')
+license=('spdx:Apache-2.0')
 depends=()
 options=('strip' 'staticlibs')
-makedepends=("re2c" "${MINGW_PACKAGE_PREFIX}-python")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/ninja-build/ninja/archive/v${pkgver}.tar.gz")
-sha256sums=('ce35865411f0490368a8fc383f29071de6690cbadc27704734978221f25e2bed')
+makedepends=("re2c" "${MINGW_PACKAGE_PREFIX}-python" "${MINGW_PACKAGE_PREFIX}-gcc")
+source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/ninja-build/ninja/archive/v${pkgver}.tar.gz"
+        "001-Handle-ERROR_DIRECTORY-when-calling-FindFirstFileExA.patch"::"https://patch-diff.githubusercontent.com/raw/ninja-build/ninja/pull/2160.patch")
+sha256sums=('31747ae633213f1eda3842686f83c2aa1412e0f5691d1c14dbbcc67fe7400cea'
+            '855623ffb3199ed5a0a0f750a05f67a9d3285129c1b8e66d045c56bd7d471838')
+
+prepare() {
+  cd "${srcdir}"/ninja-${pkgver}
+  # https://github.com/ninja-build/ninja/pull/2160
+  patch -p1 -i "${srcdir}"/001-Handle-ERROR_DIRECTORY-when-calling-FindFirstFileExA.patch
+}
 
 build() {
   mkdir -p "${pkgdir}${MINGW_PREFIX}"/bin
