--- a/mingw-w64-speex/PKGBUILD
+++ b/mingw-w64-speex/PKGBUILD
@@ -12,7 +12,7 @@ license=('BSD')
 url="https://speex.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-libogg" "${MINGW_PACKAGE_PREFIX}-speexdsp")
 options=('strip' '!libtool' 'staticlibs')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://gitlab.xiph.org/xiph/speex/-/archive/Speex-${pkgver}/speex-Speex-${pkgver}.tar.gz")
 sha256sums=('beaf2642e81a822eaade4d9ebf92e1678f301abfc74a29159c4e721ee70fdce0')
