--- a/mingw-w64-speexdsp/PKGBUILD
+++ b/mingw-w64-speexdsp/PKGBUILD
@@ -12,7 +12,7 @@ license=('BSD')
 url="https://www.speex.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 options=('strip' '!libtool' 'staticlibs')
-makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://gitlab.xiph.org/xiph/speexdsp/-/archive/SpeexDSP-${pkgver}/speexdsp-SpeexDSP-${pkgver}.tar.gz"
         "0001-include-stdint-in-resample-neon-h.patch")
 sha256sums=('d17ca363654556a4ff1d02cc13d9eb1fc5a8642c90b40bd54ce266c3807b91a7'
@@ -22,7 +22,7 @@ prepare() {
   mv "speexdsp-SpeexDSP-${pkgver}" "${_realname}-${pkgver}"
   cd ${srcdir}/${_realname}-${pkgver}
 
-  patch -p 1 -i "${srcdir}/0001-include-stdint-in-resample-neon-h.patch"
+  #patch -p 1 -i "${srcdir}/0001-include-stdint-in-resample-neon-h.patch"
 
   ./autogen.sh
 }
