--- a/mingw-w64-speexdsp/PKGBUILD
+++ b/mingw-w64-speexdsp/PKGBUILD
@@ -10,7 +10,7 @@ arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
 license=('BSD')
 url="https://www.speex.org/"
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
+#depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 options=('strip' '!libtool' 'staticlibs')
 makedepends=("${MINGW_PACKAGE_PREFIX}-gcc" "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://gitlab.xiph.org/xiph/speexdsp/-/archive/SpeexDSP-${pkgver}/speexdsp-SpeexDSP-${pkgver}.tar.gz"
