--- a/mingw-w64-arrow/PKGBUILD
+++ b/mingw-w64-arrow/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=arrow
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=11.0.0
+pkgver=12.0.0
 pkgrel=1
 pkgdesc="Apache Arrow is a cross-language development platform for in-memory data (mingw-w64)"
 arch=("any")
@@ -33,7 +33,7 @@ options=("staticlibs" "strip" "!buildflags")
 # This is the official release
 source=("${_realname}-${pkgver}.tar.gz"::"https://downloads.apache.org/arrow/arrow-${pkgver}/apache-arrow-${pkgver}.tar.gz")
 source_dir="apache-${_realname}-${pkgver}"
-sha256sums=("2dd8f0ea0848a58785628ee3a57675548d509e17213a2f5d72b0d900b43f5430")
+sha256sums=("ddd8347882775e53af7d0965a1902b7d8fcd0a030fd14f783d4f85e821352d52")
 
 pkgver() {
   cd "$source_dir"
@@ -54,6 +54,7 @@ build() {
     ${MINGW_PREFIX}/bin/cmake.exe \
     ../${source_dir}/cpp \
     -G "MSYS Makefiles" \
+    -DARROW_ACERO=ON \
     -DARROW_BUILD_STATIC=ON \
     -DARROW_BUILD_SHARED=OFF \
     -DARROW_BUILD_UTILITIES=OFF \
