--- a/mingw-w64-openssl/PKGBUILD
+++ b/mingw-w64-openssl/PKGBUILD
@@ -3,9 +3,7 @@
 _realname=openssl
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_ver=1.1.1m
-# use a pacman compatible version scheme
-pkgver=${_ver/[a-z]/.${_ver//[0-9.]/}}
+pkgver=3.1.1
 pkgrel=9800
 arch=('any')
 pkgdesc="The Open Source toolkit for Secure Sockets Layer and Transport Layer Security (mingw-w64)"
@@ -14,12 +12,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-gcc")
 options=('strip' '!buildflags' 'staticlibs')
 license=('BSD')
 url="https://www.openssl.org"
-noextract=(${_realname}-${_ver}.tar.gz)
-source=(https://www.openssl.org/source/${_realname}-${_ver}.tar.gz{,.asc}
-        'openssl-1.1.1-relocation.patch')
-sha256sums=('f89199be8b23ca45fc7cb9f1d8d3ee67312318286ad030f5316aca6462db6c96'
-            'SKIP'
-            '798d1b4dec28429d6cf2081c5b5b23b4344590a9b812e8089842389dbd175b77')
+source=("https://www.openssl.org/source/openssl-${pkgver}.tar.gz"{,.asc})
+sha256sums=('b3aa61334233b852b63ddb048df181177c2c659eb9d4376008118f9c08d07674'
+            'SKIP')
 
 validpgpkeys=('8657ABB260F056B1E5190839D9C4D26D0E604491')
 
@@ -42,44 +37,32 @@ del_file_exists() {
 }
 # =========================================== #
 
-prepare() {
-  # Clean up old sources so re-patching doesn't fail.
-  [[ -d ${srcdir}/${_realname}-${_ver} ]] && rm -rf ${srcdir}/${_realname}-${_ver}
-  tar -xzvf ${_realname}-${_ver}.tar.gz -C ${srcdir} || true
-  cd ${srcdir}/${_realname}-${_ver}
-
-# openssl-1.0.0a-ldflags.patch
-# openssl-1.0.2a-parallel-build.patch
-# openssl-1.0.1-x32.patch
-#  openssl-0.9.6-x509.patch
-# openssl-1.0.1i-relocation.patch
-  apply_patch_with_msg \
-     openssl-1.1.1-relocation.patch
-}
-
 build() {
-  rm -rf ${srcdir}/build-${CARCH}
- 
-  # No support for out-of-source builds
-  mkdir -p ${srcdir}/build-${CARCH}
-#  cp -a ${srcdir}/${_realname}-${_ver}/* ${srcdir}/build-${CARCH}
+  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   # Use mingw cflags instead of hardcoded ones
   sed -i -e '/^"mingw"/ s/-fomit-frame-pointer -O3 -Wall/-O2 -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions --param=ssp-buffer-size=4/' \
-     ${srcdir}/${_realname}-${_ver}/Configure
-#     ${srcdir}/build-${CARCH}/Configure
+    ${srcdir}/${_realname}-${pkgver}/Configurations/10-main.conf
 
-  _mingw=mingw
-  if $(echo ${CARCH} | grep -q x86_64); then
-    _mingw=mingw64
-  fi
-  cd "${srcdir}/build-${CARCH}"
-  export MSYS2_ARG_CONV_EXCL="--prefix="
-  ${srcdir}/${_realname}-${_ver}/Configure \
-    --prefix=${MINGW_PREFIX} \
-    --openssldir=ssl \
+  case "${CARCH}" in
+    i?86)
+      _mingw=mingw
+      ;;
+    x86_64)
+      _mingw=mingw64
+      ;;
+    aarch64)
+      _mingw=mingwarm64
+      ;;
+  esac
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+  ../"${_realname}-${pkgver}"/Configure \
+    --prefix="${MINGW_PREFIX}" \
+    --libdir=lib \
+    --openssldir=etc/ssl \
     ${_mingw} \
-    no-shared \
+    no-shared no-module \
     zlib-dynamic \
     enable-camellia \
     enable-capieng \
@@ -87,29 +70,14 @@ build() {
     enable-mdc2 \
     enable-rc5  \
     enable-rfc3779 \
-    -D__MINGW_USE_VC2005_COMPAT \
     -DOPENSSLBIN=\"\\\"${MINGW_PREFIX}/bin\\\"\"
 
-  make ZLIB_INCLUDE=-I"${MINGW_PREFIX}"/include depend all
+  MSYS2_ARG_CONV_EXCL="-DENGINESDIR=;-DMODULESDIR=;-DOPENSSLDIR=;-DINSTALLTOP=;-DOPENSSLBIN=" \
+  make
 }
 
 package() {
-  cd "${srcdir}/build-${CARCH}"
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/bin
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/include/openssl
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/lib/engines-1_1
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/lib/pkgconfig
-  mkdir -p "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}
-
-  make -j1 DESTDIR="${pkgdir}" MANDIR="${MINGW_PREFIX}/share/man" MANSUFFIX=ssl install
-  install -D -m644 "${srcdir}/${_realname}-${_ver}/LICENSE" \
-         "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE
-
-  chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/bin
-  chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/lib
-  chmod -R 777 "${pkgdir}${MINGW_PREFIX}"/lib/engines-1_1
-
-  install -m644 "${srcdir}/${_realname}-${_ver}/ms/applink.c" "${pkgdir}${MINGW_PREFIX}"/include/openssl/
-  rm -rf "${pkgdir}${MINGW_PREFIX}"/bin/c_rehash
-  rm -rf "${pkgdir}${MINGW_PREFIX}"/{ssl/misc,ssl/man}
+  cd "${srcdir}/build-${MSYSTEM}"
+  make install DESTDIR="${pkgdir}"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
