--- a/mingw-w64-libgit2/PKGBUILD
+++ b/mingw-w64-libgit2/PKGBUILD
@@ -45,6 +45,8 @@ build() {
     -DBUILD_SHARED_LIBS=OFF \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DCMAKE_PREFIX_PATH=${MINGW_PREFIX} \
+    -DUSE_THREADS=OFF \
+    -DBUILD_TESTS=OFF \
     -DUSE_SSH=ON \
     -DUSE_ICONV=ON \
     -DREGEX_BACKEND=builtin \
