--- a/mingw-w64-python3/PKGBUILD
+++ b/mingw-w64-python3/PKGBUILD
@@ -311,7 +311,7 @@ prepare() {
 
   autoreconf -vfi
 
-  sed -i.bak 's/#ifndef MS_WINDOWS/#ifndef BLABLA/g' Python/fileutils.c
+  sed -i.bak 's/FromWideChar(lc->_W_ ## ATTR, -1)/DecodeLocale(lc->ATTR, NULL)/g' Python/fileutils.c
 }
 
 check() {
